[package]
name = "ml-kem-rs"
version = "0.1.2"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ml_kem_rs"
crate-type = ["cdylib"]

[dependencies]
ml-kem = "=0.3.0-rc.2"
rand = "=0.10.1"

[dependencies.pyo3]
version = "0.28.2"
# "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8
features = ["abi3-py38"]
