[package]
name = "ml-kem-rs"
version = "0.2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ml_kem_rs"
crate-type = ["cdylib"]

[dependencies]
ml-kem = "=0.3.0-rc.2"
rand = "=0.10.1"

[features]
default = ["abi3"]
abi3 = ["pyo3/abi3-py38"]

[dependencies.pyo3]
version = "0.28.2"
